2004-04-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* scriptempl/pe.sc:  Put numbered .ctors.* after .ctors
	with default priority. Likewise for dtors.

2004-04-11  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* configure.host: Remove mips*-dec-bsd* target.
	* configure.tgt: Likewise.

2004-04-08  Richard Sandiford  <rsandifo@redhat.com>

	* emulparams/elf32bsmip.sh (EXTRA_EM_FILE): Define to irix.
	* emulparams/elf64bmip.sh (EXTRA_EM_FILE): Likewise.
	* emulparams/elf32bmipn32.sh (EXTRA_EM_FILE): Likewise.
	* emultempl/irix.em: New file.
	* Makefile.am (eelf32bsmip.c, eelf32bmipn32.c, eelf64bmip.c): Update
	dependencies.
	* Makefile.in: Regenerate.

2004-04-01  Paul Brook  <paul@codesourcery.com>

	* emultempl/armelf.em (byteswap_code): Add.
	(arm_elf_before_allocation): Pass extra parameter.
	(PARSE_AND_LIST_PROLOGUE): Add OPTION_BE8.
	(PARSE_AND_LIST_LONGOPTS, PARSE_AND_LIST_OPTIONS): Add be8.
	(PARSE_AND_LIST_ARGS_CASES): Handle OPTION_BE8.
	* emultempl/armelf_oabi.em: Pass extra parameter.
	* ld.texinfo: Document --be8.

2004-03-30  Stan Shebs  <shebs@apple.com>

	Remove long-obsolete MPW support.
	* mpw-config.in, mpw-make.sed, mac-ld.r: Remove files.
	* Makefile.am (mpw): Remove file-presynthesizing actions.
	* Makefile.in: Likewise.
	* ldfile.c (slash): Remove MPW case.
	* ldlex.l [MPW]: Remove unused definition.

2004-03-30  Galit Heller  <Galit.Heller@nsc.com>

	* Makefile.am (ALL_EMULATIONS): Add eelf32cr16c.o.
	(eelf32cr16c.c): New target.
	* Makefile.in: Regenerate.
	* configure.tgt: Handle cr16c-*-elf*.
	* emulparams/elf32cr16c.sh: New file.
	* scripttempl/elfcr16c.sc: Likewise
	* NEWS: Mention support for new target.

2004-03-30  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2004-03-27  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em: Update new bfd_elf_discard_info name.
	* emultempl/hppaelf.em: Likewise.
	* emultempl/ppc64elf.em: Likewise.
	* emultempl/sh64elf.em: Likewise.
